--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="main-content">
+      <p>This site was created by kunmi. It uses data from mapbox.com and openweathermap.org   </p>
        {{>header}}
        <img src="/image/robot.jpg" alt="" class="portrait"/>
     </div>
