--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,12 +9,13 @@ body {
 }
 .main-content {
   flex-grow: 1;
+  padding: 0 1rem;
 }
 footer {
   color: #888888;
   border-top: 1px solid #eeeeee;
   margin-top: 16px;
-  padding: 16px 0;
+  padding: 16px;
 }
 header {
   margin-top: 16px;
